--- a/translations/business/pl.json
+++ b/translations/business/pl.json
@@ -6,7 +6,7 @@
     "button2": "Dowiedz się więcej"
   },
   "block1": {
-    "title": "Branże i zastosowania",
+    "title": "Branże i zastosowania b",
     "description": "Siz3r znajduje zastosowanie w różnych branżach, takich jak e-commerce, sklepy tradycyjne, fitness, dietetyka oraz rozrywka. Nasze rozwiązania pomagają zwiększyć konkurencyjność, zredukować koszty i zmniejszyć ilość zwrotów towarów."
   },
   "block2": {
