--- a/translations/pl.json
+++ b/translations/pl.json
@@ -1,113 +1,37 @@
 {
   "hero": {
     "title": "In your size",
-    "description": "Siz3r to innowacyjna platforma technologiczna wspierająca zakupy odzieżowe na platformach e-commerce.",
+    "description": "Przenieś swoją sylwetkę do wirtualnej przestrzeni.",
     "button": "Pobierz aplikację",
     "button2": "Dowiedz się więcej"
   },
   "block1": {
-    "title": "Branże i zastosowania",
-    "description": "Siz3r znajduje zastosowanie w różnych branżach, takich jak e-commerce, sklepy tradycyjne, fitness, dietetyka oraz rozrywka. Nasze rozwiązania pomagają zwiększyć konkurencyjność, zredukować koszty i zmniejszyć ilość zwrotów towarów."
+    "title": "Skanowanie 3D",
+    "description": "Przekształcanie zdjęć w wirtualne sylwetki 3D."
   },
   "block2": {
-    "title": "Innowacyjne rozwiązania",
-    "description": "Dzięki tworzeniu zwymiarowanego modelu 3D ciała klienta, Siz3r rekomenduje najlepiej dopasowane ubrania z oferty sprzedawców. \n\nNasza platforma umożliwia również wizualizację klienta w wybranych strojach w formie trójwymiarowych modeli, co pomaga w dokonaniu trafnego wyboru"
+    "title": "Wirtualna Przymierzalnia",
+    "description": "Ubieranie modeli w różne stroje."
   },
   "block3": {
-    "title": "Produkty Siz3r i główne możliwości produktu",
-    "description": "Dzięki tworzeniu zwymiarowanego modelu 3D ciała klienta, Siz3r rekomenduje najlepiej dopasowane ubrania z oferty sprzedawców.",
-
-    "image1": {
-      "title": "Zbieranie wymiarów",
-      "description": "Przekształcanie zdjęć w wirtualne sylwetki 3D."
-    },
-    "image2": {
-      "title": "Ubieranie modeli",
-      "description": "Wirtualna przymierzalnia umożliwiająca wizualizację klienta w różnych strojach."
-    },
-    "image3": {
-      "title": "Skanowanie ubrań",
-      "description": "Dodawanie odzieży do systemu i prezentacja na modelach 3D."
-    }
+    "title": "Skanowanie Ubrań",
+    "description": "Dodawanie odzieży do systemu i prezentacja na modelach 3D."
   },
   "block4": {
-    "title": "Branże i zastosowania",
-    "description": "Siz3r znajduje zastosowanie w różnych branżach, takich jak e-commerce, sklepy tradycyjne, fitness, dietetyka oraz rozrywka. Nasze rozwiązania pomagają zwiększyć konkurencyjność, zredukować koszty i zmniejszyć ilość zwrotów towarów.",
-    "image1": {
-      "title": "E-commerce",
-      "description": "Lepsze dopasowanie ubrań, zmniejszenie liczby zwrotów."
-    },
-    "image2": {
-      "title": "Sklepy tradycyjne",
-      "description": "Umożliwienie klientom przymierzania ubrań bez konieczności fizycznego kontaktu."
-    },
-    "image3": {
-      "title": "Fitness i dietetyka",
-      "description": "Monitorowanie zmian sylwetki w czasie."
-    },
-    "image4": {
-      "title": "Rozrywka",
-      "description": "Personalizacja awatarów w grach i wirtualnych światach."
+    "title": "Jak Zacząć",
+    "description": "Pobierz aplikację. Skanuj siebie. Przymierz i kupuj.",
+    "instruction": {
+      "step1": "Pobierz aplikację.",
+      "step2": "Skanuj siebie.",
+      "step3": "Przymierz i kupuj.",
+      "qrCode": "Zintegrowany kod QR"
     }
   },
-  "block1business": {
-    "title": "Branże i zastosowania",
-    "description": "Siz3r znajduje zastosowanie w różnych branżach, takich jak e-commerce, sklepy tradycyjne, fitness, dietetyka oraz rozrywka. Nasze rozwiązania pomagają zwiększyć konkurencyjność, zredukować koszty i zmniejszyć ilość zwrotów towarów."
+  "block5": {
+    "title": "Dlaczego Siz3r?",
+    "description": "Nasza platforma zmniejsza ilość zwrotów, poprawia dopasowanie ubrań, a także zapewnia wygodę i oszczędność czasu."
   },
-  "block2business": {
-    "title": "Innowacyjne rozwiązania",
-    "description": "Dzięki tworzeniu zwymiarowanego modelu 3D ciała klienta, Siz3r rekomenduje najlepiej dopasowane ubrania z oferty sprzedawców. \n\nNasza platforma umożliwia również wizualizację klienta w wybranych strojach w formie trójwymiarowych modeli, co pomaga w dokonaniu trafnego wyboru"
+  "block6": {
+    "title": "Status produktu",
+    "description": "Siz3r jest w fazie beta. Obecnie produkt jest dostępny dla testerów. 'Coming soon' - pracujemy nad pełną wersją."
   },
-  "block3business": {
-    "title": "Produkty Siz3r i główne możliwości produktu",
-    "description": "Dzięki tworzeniu zwymiarowanego modelu 3D ciała klienta, Siz3r rekomenduje najlepiej dopasowane ubrania z oferty sprzedawców.",
-
-    "image1": {
-      "title": "Zbieranie wymiarów",
-      "description": "Przekształcanie zdjęć w wirtualne sylwetki 3D."
-    },
-    "image2": {
-      "title": "Ubieranie modeli",
-      "description": "Wirtualna przymierzalnia umożliwiająca wizualizację klienta w różnych strojach."
-    },
-    "image3": {
-      "title": "Skanowanie ubrań",
-      "description": "Dodawanie odzieży do systemu i prezentacja na modelach 3D."
-    }
-  },
-  "block4business": {
-    "title": "Branże i zastosowania",
-    "description": "Siz3r znajduje zastosowanie w różnych branżach, takich jak e-commerce, sklepy tradycyjne, fitness, dietetyka oraz rozrywka. Nasze rozwiązania pomagają zwiększyć konkurencyjność, zredukować koszty i zmniejszyć ilość zwrotów towarów.",
-    "image1": {
-      "title": "E-commerce",
-      "description": "Lepsze dopasowanie ubrań, zmniejszenie liczby zwrotów."
-    },
-    "image2": {
-      "title": "Sklepy tradycyjne",
-      "description": "Umożliwienie klientom przymierzania ubrań bez konieczności fizycznego kontaktu."
-    },
-    "image3": {
-      "title": "Fitness i dietetyka",
-      "description": "Monitorowanie zmian sylwetki w czasie."
-    },
-    "image4": {
-      "title": "Rozrywka",
-      "description": "Personalizacja awatarów w grach i wirtualnych światach."
-    }
-  },
-  "footer": {
-    "description": "Siz3r to innowacyjna platforma technologiczna wspierająca zakupy odzieżowe na platformach e-commerce.",
-    "technology": "Technologia",
-    "business": "Biznes",
-    "products": "Produkty",
-    "terms": "Regulamin",
-    "privacyPolicy": "Polityka prywatności",
-    "googleButton": ""
-  },
-  "header": {
-    "home": "Home",
-    "business": "Dla biznesu",
-    "contact": "Kontakt",
-    "downloadApp": "Pobierz aplikację"
-  }
-}
