--- a/translations/pl.json
+++ b/translations/pl.json
@@ -1,13 +1,25 @@
 {
   "hero": {
     "title": "In your size",
-    "description": "Siz3r to innowacyjna platforma technologiczna wspierająca zakupy odzieżowe na platformach e-commerce.",
+    "description": "Przenieś swoją sylwetkę do wirtualnej przestrzeni i przymierzaj ubrania bez wychodzenia z domu",
     "button": "Pobierz aplikację",
     "button2": "Dowiedz się więcej"
   },
   "block1": {
-    "title": "Branże i zastosowania",
-    "description": "Siz3r znajduje zastosowanie w różnych branżach, takich jak e-commerce, sklepy tradycyjne, fitness, dietetyka oraz rozrywka. Nasze rozwiązania pomagają zwiększyć konkurencyjność, zredukować koszty i zmniejszyć ilość zwrotów towarów."
+    "title": "In your size",
+    "description": "Pobierz aplikację. Zrób zdjęcie. Przymierz i kupuj.",
+    "image1": {
+      "title": "Pobierz aplikację",
+      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    },
+    "image2": {
+      "title": "Zrób zdjęcie",
+      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    },
+    "image3": {
+      "title": "Przymierz i kupuj",
+      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    }
   },
   "block2": {
     "title": "Innowacyjne rozwiązania",
