--- a/translations/pl.json
+++ b/translations/pl.json
@@ -5,6 +5,12 @@
     "button": "Pobierz aplikację",
     "button2": "Dowiedz się więcej"
   },
+  "businessHero": {
+    "title": "Business",
+    "description": "Siz3r to innowacyjna platforma wspierająca zakupy odzieżowe online.",
+    "button": "Pobierz aplikację",
+    "button2": "Dowiedz się więcej"
+  },
   "block1": {
     "title": "In your size",
     "description": "Pobierz aplikację. Zrób zdjęcie. Przymierzaj i kupuj.",
